php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #73803 Reflection of ZipArchive does not show public properties
Submitted: 2016-12-22 16:38 UTC Modified: 2017-03-21 10:17 UTC
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: RQuadling at GMail dot com Assigned: remi (profile)
Status: Closed Package: Zip Related
PHP Version: 7.0.14 OS: n/a
Private report: No CVE-ID: None
 [2016-12-22 16:38 UTC] RQuadling at GMail dot com
Description:
------------
The ZipArchive class has 5 public properties (as documented in http://uk1.php.net/manual/en/class.ziparchive.php).

But these are not visible via reflection.


Test script:
---------------
php --re ZipArchive | grep Properties

Expected result:
----------------
  - Properties [5] {

Actual result:
--------------
  - Properties [0] {

Patches

eeiofvbw (last revision 2017-01-16 16:02 UTC by sample at email dot tst)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2016-12-22 16:39 UTC] RQuadling at GMail dot com
As a consequence, using tools like PHPStan on a ZipArchive, you'll get an error like ...


Access to an undefined property ZipArchive::$numFiles.
 [2016-12-30 13:54 UTC] cmb@php.net
-Status: Open +Status: Verified -Package: zip +Package: Zip Related
 [2017-03-21 10:17 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=908029bbc0e7e504bd03956ba11555bb02cef889
Log: Fixed Bug #73803 Reflection of ZipArchive does not show public properties
 [2017-03-21 10:17 UTC] remi@php.net
-Status: Verified +Status: Closed
 [2017-03-21 10:17 UTC] remi@php.net
-Assigned To: +Assigned To: remi
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 06:00:02 2026 UTC