Fixed Bug #73803 Reflection of ZipArchive does not show public properties